# fabric-agent

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcp_config.json  mcp_smoke_client.py  pyproject.toml  setup_check.py  setup_fabric.py
.github/workflows/: fabric-auto-heal.yml  fabric-impact-analysis.yml  publish.yml  schema-gate.yml
contracts/: example_contract.yaml
docs/: 01_INGEST_BRONZE_PROOF.md  ENTERPRISE_ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  PREREQUISITES.md  PRJ_SELF_HEALING_FABRICINFRASTRUCTURE_PROOF.md
docs/assets/ingest_bronze/: E5_alert_json_payload.json  MANIFEST.md
docs/assets/self_healing/: MANIFEST.md
docs/innovator/: CI_CD_OPTION2.md  CONTROL_TOWER_UI.md  SAFE_REFACTOR.md  SCHEMA_DRIFT_AGENT.md
examples/: day2_additive.json  day2_breaking.json  observed_schema.json  sample_impact_report.json  sample_lineage_graph.json  vendor_day1_fact_sales_schema.json  vendor_day2_fact_sales_schema.json
fabric_agent/: README.md  __init__.py  cli.py  mcp_server.py  ui_app.py
fabric_agent/agents/: __init__.py  base.py  llm_orchestrator.py  orchestrator.py  specialized.py  validation.py
fabric_agent/api/: __init__.py  fabric_client.py  llm_providers.py  resilience.py
fabric_agent/cicd/: change_packet.py  deploy_pipeline.py
fabric_agent/core/: __init__.py  agent.py  approval.py  cli_state.py  config.py  fabric_env.py
fabric_agent/guards/: __init__.py  freshness_guard.py  maintenance_guard.py  models.py  monitor.py
fabric_agent/healing/: __init__.py  detector.py  healer.py  models.py  monitor.py  shortcut_manager.py
fabric_agent/integrations/: __init__.py  email.py  servicenow.py  slack.py  teams.py
fabric_agent/lineage/: __init__.py  auto_fix.py  engine.py  models.py  pipeline_parser.py
fabric_agent/memory/: __init__.py  embedding_client.py  operation_memory.py  session_context.py  vector_store.py
fabric_agent/policy/: __init__.py
fabric_agent/refactor/: __init__.py  executor.py  models.py  orchestrator.py  safe_rename_engine.py
fabric_agent/reporting/: __init__.py  html.py
fabric_agent/schema/: contracts.py  drift.py
fabric_agent/storage/: __init__.py  memory_manager.py
fabric_agent/tools/: __init__.py  enterprise_data_generator.py  enterprise_dax_generator.py  fabric_tools.py  models.py  safety_refactor.py  setup_enterprise_demo.py  workspace_graph.py
fabric_agent/ui/: __init__.py  graph_viewer.py
fabric_agent/utils/: __init__.py
notebooks/: 01_ingest_bronze_autoheal.py  01_setup_data.py
schemas/: agg_daily_sales.json  fact_sales.json
scripts/: README.md  _list_lh_tables.py  analyze_data_impact.py  bootstrap_complete.py  bootstrap_enterprise_domains.py  build_and_upload.py  build_workspace_graph.py  cleanup_unidentified_tables.py  create_shortcuts.py  export_semantic_model.py  list_capacities.py  run_fabricops_delta_maintenance.py  run_fabricops_freshness_scan.py  run_fabricops_schema_gate.py  safe_downstream_autofix.py  safe_measure_rename.py  seed_enterprise_data.py  test_live_integration.py  trigger_notebook_pipelines_api.py  update_enterprise_notebooks.py  validate_code.py  validate_enterprise_environment.py  vendor_schema_drift_impact.py
tests/: __init__.py  conftest.py  test_approval.py  test_change_packet.py  test_cli_runtime.py  test_definition_preserves_parts.py  test_fabric_tools_mocked.py  test_guards.py  test_healer_error_paths.py  test_healing_detector.py  test_html_reports.py  test_memory_manager.py  test_models.py  test_refactor_orchestrator.py  test_rollback_safety.py  test_safe_replace.py  test_schema_drift.py  test_schema_drift_edge_cases.py  test_schema_gate.py  test_workspace_graph.py
ui/: app.py
